--- a/jaz-s27444-nbp/src/main/resources/application.properties
+++ b/jaz-s27444-nbp/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=jaz-s27444-nbp
+
+spring.datasource.url=jdbc:mysql://szuflandia.pjwstk.edu.pl:3306/s27444
+spring.datasource.username=s27444
+spring.datasource.password=Adr.Kems
+
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl.auto=validate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
